# qt-diplom2

indexer/: CMakeLists.txt  README.md  config_default.ini  dbhandler.cpp  dbhandler.h  indexer.cpp  indexer.h  main.cpp
sample_text_files/emacs/: README.md
searcher/: CMakeLists.txt  README.md  config_default.ini  dbhandler.cpp  dbhandler.h  dbstatswindow.cpp  dbstatswindow.h  dbstatswindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
